plugins {
    id 'java-library'
    id "com.github.johnrengelman.shadow" version "6.1.0"
}

group 'net.minestom.vanilla'
version '1.0'

sourceCompatibility = 1.16

java {
    withSourcesJar()
    withJavadocJar()
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
            srcDir 'src/test/java'
            srcDir 'src/autogenerated/java'
        }
    }
    generators {
        java {
            srcDir 'src/generators/java'
        }

        compileClasspath += sourceSets.main.runtimeClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spongepowered.org/maven' }
    maven { url 'https://libraries.minecraft.net/' }
    maven { url 'https://jitpack.io' }
}

dependencies {

    // Raycasting
    implementation 'com.github.EmortalMC:Rayfast:5b83a003de'

    implementation "com.github.Minestom:Minestom:${project.minestom_version}"

    api("com.github.jglrxavpok:Hephaistos:${project.hephaistos_version}:gson")
    api("com.github.jglrxavpok:Hephaistos:${project.hephaistos_version}") {
        capabilities {
            requireCapability("org.jglrxavpok.nbt:Hephaistos-gson")
        }
    }
}

// Code sample, be sure to modify the 'Main-Class' value
// based on your application
jar {
    manifest {
        attributes 'Main-Class': 'net.minestom.vanilla.LaunchServer',
                "Multi-Release": true
    }
}
